# convex-hull-based-feature-selection

./: LICENSE  README.md  pyproject.toml
convex_feature_select/: __init__.py  metric.py  plot.py  selector.py
examples/: example1_breast_cancer.py  example2_multiclass_pipeline.py  example3_metric_only.py
tests/: test_convex_feature_select.py
