[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convex-feature-select"
version = "0.1.0"
description = "Two-step convex hull-based feature selection for classification (scikit-learn compatible)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/your-org/convex-feature-select"

[tool.setuptools.packages.find]
where = ["."]
include = ["convex_feature_select*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
